Fix text align on tabs
- Text still overflows out of tabs if there isn't enough space, will need media queries.

--- a/styles.css
+++ b/styles.css
@@ -377,6 +377,42 @@ div.tab:active {
     }
 }
 
+div.OverShadow {
+    background-image: linear-gradient(#00000010, #03030371, #000000e8);
+    height: 100%;
+    width: 100%;
+    bottom: 0%;
+    left: 0%;
+    border-radius: 17px;
+    transition: 0.25s;
+    position: absolute;
+    text-align: center;
+}
+
+div.OverShadow span {
+    position: absolute;
+    font-size: 100%;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: 0.25s;
+}
+
+@media (hover: hover) {
+    div.tab:hover div.OverShadow {
+        opacity: 0.7;
+        transition: 0.25s;
+    }
+    div.tab:hover div.OverShadow span {
+        font-size: 160%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        transition: 0.25s;
+        text-align: center;
+    }
+}
+
 #wipSmol {
     display: none;
 }
@@ -479,36 +515,6 @@ div.CloseIcon:active {
 
 
 /* End of popup stuff */
-
-div.moveUp {
-    background-image: linear-gradient(#00000010, #03030371, #000000e8);
-    height: 100%;
-    width: 100%;
-    bottom: 0%;
-    left: 0%;
-    border-radius: 17px;
-    transition: 0.25s;
-    position: absolute;
-}
-
-div.moveUp span {
-    position: absolute;
-    right: 35%;
-    top: 85%;
-    transition: 0.25s;
-}
-
-@media (hover: hover) {
-    div.tab:hover div.moveUp {
-        opacity: 0.7;
-        transition: 0.25s;
-    }
-    div.tab:hover div.moveUp span {
-        transform: scale(1.6);
-        transition: 0.25s;
-        top: 45%;
-    }
-}
 
 #overflowButton {
     display: none;
